--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node esbuild.ts --watch",
     "start": "node dist/backend.js",
     "watch": "npm run dev",
-    "dev:watch": "nodemon --watch dist --exec node dist/index.js",
+    "dev:watch": "tsx watch src/app.ts",
     "test": "jest",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint 'src/**/*.ts'"
@@ -28,6 +28,7 @@
     "koa-router": "^12.0.1",
     "koa-session": "^6.0.0",
     "koa-static": "^5.0.0",
+    "koa-swagger-decorator": "^1.8.7",
     "koa-websocket": "^7.0.0",
     "marked": "^12.0.0",
     "nodemon": "^3.0.3",
@@ -36,7 +37,9 @@
     "pg": "^8.11.3",
     "quill": "^2.0.3",
     "quill-image-compress": "^2.0.3",
-    "sanitize-html": "^2.13.0"
+    "sanitize-html": "^2.13.0",
+    "swagger-jsdoc": "^6.2.8",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
@@ -53,6 +56,7 @@
     "@types/passport-openidconnect": "^0.1.3",
     "@types/pg": "^8.11.11",
     "@types/sanitize-html": "^2.13.0",
+    "@types/uuid": "^10.0.0",
     "chai": "^4.3.4",
     "esbuild": "^0.25.0",
     "eslint": "^9.20.0",
@@ -64,6 +68,8 @@
     "supertest": "^6.1.6",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsc": "^2.0.4",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0"
   }
