--- a/backend/package.json
+++ b/backend/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@fastify/jwt": "^8.0.1",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/jwt": "^9.0.4",
+    "@fastify/oauth2": "^8.1.2",
+    "@fastify/static": "^8.1.0",
     "@mikro-orm/core": "^6.4.6",
     "@mikro-orm/migrations": "^6.4.6",
     "@mikro-orm/postgresql": "^6.4.6",
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "argon2": "^0.41.1",
-    "fastify": "^4.28.1",
-    "zod": "^3.23.8"
+    "fastify": "^5.2.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@mikro-orm/cli": "^6.4.6",
