--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@fastify/jwt": "^9.0.4",
     "@fastify/oauth2": "^8.1.2",
     "@fastify/static": "^8.1.0",
+    "@fastify/swagger-ui": "^5.2.1",
     "@mikro-orm/core": "^6.4.6",
     "@mikro-orm/migrations": "^6.4.6",
     "@mikro-orm/postgresql": "^6.4.6",
