--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,18 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@mikro-orm/cli": "^6.4.6",
     "@mikro-orm/reflection": "^6.4.6",
     "@mikro-orm/seeder": "^6.4.6",
     "@types/node": "^22.9.0",
     "@types/slug": "^5.0.9",
+    "eslint": "^9.20.1",
+    "eslint-typescript": "^1.1.0",
+    "jiti": "^2.4.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.0",
     "vitest": "^2.1.4"
   },
   "scripts": {
@@ -31,7 +36,8 @@
     "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts",
     "start:prod": "NODE_ENV=production node dist/server.js",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint src test"
   },
   "pnpm": {
     "patchedDependencies": {
