--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^9.0.4",
     "@fastify/oauth2": "^8.1.2",
+    "@fastify/session": "^11.1.0",
     "@fastify/static": "^8.1.0",
     "@fastify/swagger-ui": "^5.2.1",
     "@mikro-orm/core": "^6.4.6",
@@ -26,6 +27,8 @@
     "eslint": "^9.20.1",
     "eslint-typescript": "^1.1.0",
     "jiti": "^2.4.2",
+    "nodemon": "^3.1.9",
+    "pino-pretty": "^13.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
@@ -34,6 +37,7 @@
   "scripts": {
     "build": "tsc && npx mikro-orm-esm cache:generate --combined",
     "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts",
+    "start:watch": "nodemon --watch src --ext ts --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts'",
     "start:prod": "NODE_ENV=production node dist/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
