--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^9.0.4",
     "@fastify/oauth2": "^8.1.2",
+    "@fastify/response-validation": "^3.0.3",
     "@fastify/session": "^11.1.0",
     "@fastify/static": "^8.1.0",
     "@fastify/swagger-ui": "^5.2.1",
@@ -26,9 +27,12 @@
     "@types/slug": "^5.0.9",
     "eslint": "^9.20.1",
     "eslint-typescript": "^1.1.0",
+    "husky": "^9.1.7",
     "jiti": "^2.4.2",
+    "lint-staged": "^15.4.3",
     "nodemon": "^3.1.9",
     "pino-pretty": "^13.0.0",
+    "prettier": "^3.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
@@ -41,7 +45,8 @@
     "start:prod": "NODE_ENV=production node dist/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "prepare": "husky"
   },
   "pnpm": {
     "patchedDependencies": {
