--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,22 @@
   "name": "backend",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "build": "tsc && npx mikro-orm-esm cache:generate --combined",
+    "generate-openapi": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/generate-openapi.ts",
+    "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts",
+    "start:watch": "nodemon --watch src --ext ts --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts'",
+    "start:prod": "NODE_ENV=production node dist/server.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "lint": "eslint src",
+    "prepare": "husky"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@mikro-orm/core@6.4.6": "patches/@mikro-orm__core@6.4.6.patch"
+    }
+  },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^9.0.4",
@@ -37,20 +53,5 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
     "vitest": "^2.1.4"
-  },
-  "scripts": {
-    "build": "tsc && npx mikro-orm-esm cache:generate --combined",
-    "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts",
-    "start:watch": "nodemon --watch src --ext ts --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts'",
-    "start:prod": "NODE_ENV=production node dist/server.js",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "lint": "eslint src",
-    "prepare": "husky"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "@mikro-orm/core@6.4.6": "patches/@mikro-orm__core@6.4.6.patch"
-    }
   }
 }
