--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc && npx mikro-orm-esm cache:generate --combined",
+    "build": "tsc && npx mikro-orm-esm cache:generate --combined && pnpm make-sdk",
     "generate-openapi": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/generate-openapi.ts",
     "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts",
     "start:watch": "nodemon --watch src --ext ts --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts'",
@@ -11,7 +11,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint src",
-    "prepare": "husky"
+    "prepare": "husky",
+    "make-sdk": "pnpm generate-openapi && openapi-ts -i dist/openapi.json -o src/sdk -c @hey-api/client-axios"
   },
   "pnpm": {
     "patchedDependencies": {
@@ -26,6 +27,7 @@
     "@fastify/session": "^11.1.0",
     "@fastify/static": "^8.1.0",
     "@fastify/swagger-ui": "^5.2.1",
+    "@hey-api/client-axios": "^0.6.1",
     "@mikro-orm/core": "^6.4.6",
     "@mikro-orm/migrations": "^6.4.6",
     "@mikro-orm/postgresql": "^6.4.6",
@@ -36,6 +38,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@hey-api/openapi-ts": "^0.64.4",
     "@mikro-orm/cli": "^6.4.6",
     "@mikro-orm/reflection": "^6.4.6",
     "@mikro-orm/seeder": "^6.4.6",
