--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "test:watch": "vitest",
     "lint": "eslint src",
     "prepare": "husky",
+    "seed-demo": "dropdb cc-katalog && createdb cc-katalog && mikro-orm-esm migration:up && mikro-orm-esm seeder:run -c DemoSeeder",
     "make-sdk": "pnpm generate-openapi && openapi-ts -i dist/openapi.json -o src/sdk -c @hey-api/client-axios"
   },
   "pnpm": {
