missing deps and install script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "cd backend && pnpm lint",
     "build": "cd frontend && pnpm build && cd ../backend && pnpm build",
     "prettier": "prettier backend/src frontend/src",
-    "prepare": "husky"
+    "prepare": "husky",
+    "install": "cd frontend && pnpm install && cd ../frontend && pnpm install"
   },
   "keywords": [],
   "author": "",
