--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@fastify/response-validation": "^3.0.3",
     "@fastify/session": "^11.1.0",
     "@fastify/static": "^8.1.0",
+    "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.1",
     "@hey-api/client-axios": "^0.6.1",
     "@mikro-orm/core": "^6.4.6",
@@ -34,6 +35,7 @@
     "@mikro-orm/postgresql": "^6.4.6",
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "argon2": "^0.41.1",
+    "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "zod": "^3.24.2"
   },
