--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
           node-version: 22
           cache: 'pnpm'
 
+      - run: env
+
       - name: Install dependencies
         run: |
           pnpm install --frozen-lockfile
