--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "argon2": "^0.41.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "pino": "^9.6.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
