--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@mikro-orm/postgresql": "^6.4.6",
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "argon2": "^0.41.1",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "pino": "^9.6.0",
