Fixes, editing integration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@hey-api/client-axios": "^0.6.1",
+    "@milkdown/crepe": "^7.6.3",
+    "@milkdown/kit": "^7.6.3",
+    "@milkdown/react": "^7.6.3",
     "@picocss/pico": "^2.0.6",
     "axios": "^1.7.9",
     "react": "^19.0.0",
