--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@picocss/pico": "^2.0.6",
     "axios": "^1.7.9",
     "react": "^19.0.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
   },
