--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint src",
-    "seed-demo": "dropdb cc-katalog && createdb cc-katalog && mikro-orm-esm migration:up && mikro-orm-esm seeder:run -c DemoSeeder",
+    "make-demo-db": "npx mikro-orm-esm migration:fresh --drop-db --seed DemoSeeder",
     "make-sdk": "pnpm generate-openapi && openapi-ts -i dist/openapi.json -o src/sdk -c @hey-api/client-axios && pnpm prettier -w src/sdk"
   },
   "dependencies": {
