--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "test:watch": "vitest",
     "lint": "eslint src && tsc -b",
     "make-demo-db": "npx mikro-orm-esm migration:fresh --drop-db --seed DemoSeeder",
-    "make-sdk": "pnpm generate-openapi && openapi-ts -i dist/openapi.json -o src/sdk -c @hey-api/client-axios && pnpm prettier -w src/sdk"
+    "make-sdk": "pnpm generate-openapi && openapi-ts -i dist/openapi.json -o src/sdk -c @hey-api/client-axios && pnpm prettier -w src/sdk",
+    "migration:up": "mikro-orm-esm migration:up"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
