--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,12 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "html-to-text": "^9.0.5",
+    "nodemailer": "^6.10.0",
     "pino": "^9.6.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "ts-pattern": "^5.6.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -42,7 +47,11 @@
     "@mikro-orm/cli": "^6.4.6",
     "@mikro-orm/reflection": "^6.4.6",
     "@mikro-orm/seeder": "^6.4.6",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/slug": "^5.0.9",
     "eslint": "^9.20.1",
     "eslint-typescript": "^1.1.0",
