--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "dist",
     "declaration": true,
     "experimentalDecorators": true,
+    "jsx": "react",
     "types": ["vitest/globals", "./src/types/customMatchers"]
   },
   "include": ["./src/**/*.ts"],
