--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,4 +70,4 @@ jobs:
 
       - name: Deploy to Server
         run: |
-          git push -f hans@${{ secrets.DEPLOYMENT_HOST }}:cc-katalog HEAD:deploy 
+          git push -f hans@${{ secrets.DEPLOYMENT_HOST }}:exhibitron HEAD:deploy
