multi-exhibition and graphql

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,13 @@
     "lint": "eslint src && tsc -b",
     "make-demo-db": "npx mikro-orm-esm migration:fresh --drop-db --seed DemoSeeder",
     "make-sdk": "pnpm generate-openapi && openapi-ts -i dist/openapi.json -o src/sdk -c @hey-api/client-axios && pnpm prettier -w src/sdk",
-    "migration:up": "mikro-orm-esm migration:up"
+    "migration:up": "mikro-orm-esm migration:up",
+    "generate": "graphql-codegen",
+    "generate:watch": "graphql-codegen --watch"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.3",
+    "@as-integrations/fastify": "^2.1.1",
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^9.0.4",
     "@fastify/oauth2": "^8.1.2",
@@ -29,11 +33,15 @@
     "@mikro-orm/migrations": "^6.4.6",
     "@mikro-orm/postgresql": "^6.4.6",
     "@mikro-orm/sql-highlighter": "^1.0.1",
+    "@types/graphql-type-json": "^0.3.5",
     "argon2": "^0.41.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
-    "fastify": "^5.2.1",
+    "fastify": "link:@apollo/server/fastify",
+    "graphql": "^16.10.0",
+    "graphql-type-json": "^0.3.2",
     "html-to-text": "^9.0.5",
+    "memoizee": "^0.4.17",
     "nodemailer": "^6.10.0",
     "pino": "^9.6.0",
     "react": "^19.0.0",
@@ -43,11 +51,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/introspection": "^4.0.3",
+    "@graphql-codegen/typescript": "^4.1.5",
+    "@graphql-codegen/typescript-resolvers": "^4.4.4",
     "@hey-api/openapi-ts": "^0.64.4",
     "@mikro-orm/cli": "^6.4.6",
     "@mikro-orm/reflection": "^6.4.6",
     "@mikro-orm/seeder": "^6.4.6",
+    "@parcel/watcher": "^2.5.1",
     "@types/html-to-text": "^9.0.4",
+    "@types/memoizee": "^0.4.11",
     "@types/node": "^22.9.0",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.8",
@@ -55,6 +69,8 @@
     "@types/slug": "^5.0.9",
     "eslint": "^9.20.1",
     "eslint-typescript": "^1.1.0",
+    "graphql-codegen-typescript-common": "0.18.2",
+    "graphql-codegen-typescript-react-apollo": "0.18.2",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
     "lint-staged": "^15.4.3",
