--- a/backend/package.json
+++ b/backend/package.json
@@ -69,8 +69,10 @@
     "@types/slug": "^5.0.9",
     "eslint": "^9.20.1",
     "eslint-typescript": "^1.1.0",
+    "gql.tada": "^1.8.10",
     "graphql-codegen-typescript-common": "0.18.2",
     "graphql-codegen-typescript-react-apollo": "0.18.2",
+    "graphql-request": "^7.1.2",
     "graphql-tag": "^2.12.6",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
