starting modularization of graphql schema

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,7 +17,10 @@
       }
     ]
   },
-  "include": ["./src/**/*.ts"],
+  "include": [
+    "./src/**/*.ts",
+    "../node_modules/.pnpm/vitest@2.1.9_@types+node@22.13.9/node_modules/vitest/globals.d.ts"
+  ],
   "exclude": ["./src/sdk"],
   "ts-node": {
     "esm": true,
