--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@fastify/oauth2": "^7.9.0",
     "@fastify/session": "^10.9.0",
     "@fastify/static": "^7.0.4",
+    "@graphql-tools/merge": "^9.0.22",
     "@hey-api/client-axios": "^0.6.1",
     "@mikro-orm/core": "^6.4.9",
     "@mikro-orm/migrations": "^6.4.9",
@@ -34,6 +35,7 @@
     "axios": "^1.8.2",
     "dotenv": "^16.4.7",
     "fastify": "link:@apollo/server/fastify",
+    "glob": "^11.0.1",
     "graphql": "^16.10.0",
     "graphql-type-json": "^0.3.2",
     "html-to-text": "^9.0.5",
@@ -56,6 +58,7 @@
     "@mikro-orm/reflection": "^6.4.9",
     "@mikro-orm/seeder": "^6.4.9",
     "@parcel/watcher": "^2.5.1",
+    "@types/glob": "^8.1.0",
     "@types/html-to-text": "^9.0.4",
     "@types/memoizee": "^0.4.11",
     "@types/node": "^22.13.9",
