some tests pass, still wrestling with graphql setup

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,6 @@
     "@mikro-orm/migrations": "^6.4.9",
     "@mikro-orm/postgresql": "^6.4.9",
     "@mikro-orm/sql-highlighter": "^1.0.1",
-    "@types/graphql-type-json": "^0.3.5",
     "argon2": "^0.41.1",
     "axios": "^1.8.2",
     "dotenv": "^16.4.7",
@@ -52,6 +51,7 @@
     "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript": "^4.1.5",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@graphql-codegen/typescript-resolvers": "^4.4.4",
     "@hey-api/openapi-ts": "^0.64.4",
     "@mikro-orm/cli": "^6.4.9",
@@ -59,6 +59,7 @@
     "@mikro-orm/seeder": "^6.4.9",
     "@parcel/watcher": "^2.5.1",
     "@types/glob": "^8.1.0",
+    "@types/graphql-type-json": "^0.3.5",
     "@types/html-to-text": "^9.0.4",
     "@types/memoizee": "^0.4.11",
     "@types/node": "^22.13.9",
