--- a/backend/codegen.yml
+++ b/backend/codegen.yml
@@ -1,7 +1,8 @@
 overwrite: true
-schema: "src/schema.graphql"
+schema: "src/**/*.graphql"
 generates:
   src/generated/graphql.ts:
     plugins:
       - "typescript"
       - "typescript-resolvers"
+      - "@graphql-codegen/typescript-react-apollo"
