--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,7 @@
     "argon2": "^0.41.1",
     "axios": "^1.8.2",
     "dotenv": "^16.4.7",
-    "fastify": "link:@apollo/server/fastify",
+    "fastify": "^4.29.0",
     "glob": "^11.0.1",
     "graphql": "^16.10.0",
     "graphql-type-json": "^0.3.2",
@@ -51,8 +51,8 @@
     "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript": "^4.1.5",
-    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@graphql-codegen/typescript-resolvers": "^4.4.4",
+    "@graphql-tools/load-files": "^7.0.1",
     "@hey-api/openapi-ts": "^0.64.4",
     "@mikro-orm/cli": "^6.4.9",
     "@mikro-orm/reflection": "^6.4.9",
@@ -71,7 +71,6 @@
     "eslint-typescript": "^1.1.0",
     "gql.tada": "^1.8.10",
     "graphql-codegen-typescript-common": "0.18.2",
-    "graphql-codegen-typescript-react-apollo": "0.18.2",
     "graphql-request": "^7.1.2",
     "graphql-tag": "^2.12.6",
     "husky": "^9.1.7",
@@ -82,7 +81,7 @@
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.24.0",
+    "typescript-eslint": "^8.26.0",
     "vitest": "^2.1.9"
   }
 }
