--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "devDependencies": {
     "husky": "^9.1.7",
     "prettier": "^3.5.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "@fastify/cookie": "11.0.2"
+    }
   }
 }
