--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -24,7 +24,14 @@
 
     "paths": {
       "@*": ["./src/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "gql.tada/ts-plugin",
+        "schema": "./schema.graphql",
+        "tadaOutputLocation": "./src/generated/graphql-env.d.ts"
+      }
+    ]
   },
   "include": ["src"]
 }
