--- a/backend/codegen.yml
+++ b/backend/codegen.yml
@@ -5,3 +5,6 @@ generates:
     plugins:
       - "typescript"
       - "typescript-resolvers"
+  src/generated/combined-schema.graphql:
+    plugins:
+      - "schema-ast"
