--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,10 @@ jobs:
         run: |
           pnpm install --frozen-lockfile --recursive
 
+      - name: Run GraphQL code generation
+        run: |
+          pnpm generate
+
       - name: Run tests
         env:
           PGHOST: localhost
