need to generate types before compiling in backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc && npx mikro-orm-esm cache:generate --combined && pnpm generate",
+    "build": "pnpm generate && tsc && npx mikro-orm-esm cache:generate --combined",
     "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts",
     "start:watch": "nodemon --watch src --ext ts --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server.ts'",
     "start:prod": "NODE_ENV=production node dist/server.js",
