--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,9 @@
     "lint": "eslint src && tsc -b",
     "make-demo-db": "npx mikro-orm-esm migration:fresh --drop-db --seed DemoSeeder",
     "migration:up": "mikro-orm-esm migration:up",
-    "generate": "graphql-codegen",
-    "generate:watch": "graphql-codegen --watch"
+    "generate": "graphql-codegen && pnpm generate-graphql-types",
+    "generate:watch": "graphql-codegen --watch",
+    "generate-graphql-types": "gql.tada generate-output"
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
