--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.3",
-    "@milkdown/crepe": "^7.6.3",
-    "@milkdown/kit": "^7.6.3",
-    "@milkdown/react": "^7.6.3",
     "@picocss/pico": "^2.0.6",
     "axios": "^1.7.9",
     "gql.tada": "^1.8.10",
     "graphql": "^16.10.0",
     "papaparse": "^5.5.2",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^19.0.0",
