--- a/backend/package.json
+++ b/backend/package.json
@@ -32,12 +32,14 @@
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "argon2": "^0.41.1",
     "axios": "^1.8.2",
+    "dompurify": "^3.2.4",
     "dotenv": "^16.4.7",
     "fastify": "^4.29.0",
     "glob": "^11.0.1",
     "graphql": "^16.10.0",
     "graphql-type-json": "^0.3.2",
     "html-to-text": "^9.0.5",
+    "isomorphic-dompurify": "^2.22.0",
     "memoizee": "^0.4.17",
     "nodemailer": "^6.10.0",
     "pino": "^9.6.0",
