--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.13.3",
     "@picocss/pico": "^2.0.6",
     "axios": "^1.7.9",
+    "dompurify": "^3.2.4",
     "gql.tada": "^1.8.10",
     "graphql": "^16.10.0",
     "papaparse": "^5.5.2",
