--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@mikro-orm/migrations": "^6.4.9",
     "@mikro-orm/postgresql": "^6.4.9",
     "@mikro-orm/sql-highlighter": "^1.0.1",
+    "@types/jsdom": "^21.1.7",
     "argon2": "^0.41.1",
     "axios": "^1.8.2",
     "dompurify": "^3.2.4",
@@ -77,6 +78,7 @@
     "graphql-tag": "^2.12.6",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
+    "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
     "nodemon": "^3.1.9",
     "pino-pretty": "^13.0.0",
@@ -84,6 +86,6 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0",
-    "vitest": "^2.1.9"
+    "vitest": "^3.0.8"
   }
 }
