--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@picocss/pico": "^2.0.6",
     "axios": "^1.7.9",
     "dompurify": "^3.2.4",
+    "fast-deep-equal": "^3.1.3",
     "gql.tada": "^1.8.10",
     "graphql": "^16.10.0",
     "papaparse": "^5.5.2",
