restructure file names

--- a/backend/src/graphql.config.yml
+++ b/backend/src/graphql.config.yml
@@ -1,6 +1,6 @@
 schema:
-  - schema.graphql
-  - 'modules/**/*.graphql'
+  - 'modules/**/schema.graphql'
+documents: []
 extensions:
   endpoints:
     default:
