--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@as-integrations/fastify": "^2.1.1",
     "@fastify/cookie": "^7.4.0",
     "@fastify/jwt": "^9.0.4",
+    "@fastify/multipart": "^7.7.3",
     "@fastify/oauth2": "^7.9.0",
     "@fastify/session": "^10.9.0",
     "@fastify/static": "^7.0.4",
