--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-contenteditable": "^3.3.7",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0"
