--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.3",
     "@picocss/pico": "^2.0.6",
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.7.9",
     "dompurify": "^3.2.4",
     "fast-deep-equal": "^3.1.3",
