--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -9,6 +9,8 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
@@ -27,5 +29,5 @@
       }
     ]
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "src/build/**/*.{ts,js,js.d.ts}"]
 }
