--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "@apollo/client": "^3.13.3",
     "@picocss/pico": "^2.0.6",
     "@react-pdf/renderer": "^4.3.0",
+    "@types/qrcode": "^1.5.5",
     "axios": "^1.7.9",
     "dompurify": "^3.2.4",
     "fast-deep-equal": "^3.1.3",
     "gql.tada": "^1.8.10",
     "graphql": "^16.10.0",
     "papaparse": "^5.5.2",
+    "qrcode": "^1.5.4",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-contenteditable": "^3.3.7",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/node": "^20.11.30",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -45,7 +48,6 @@
     "globals": "^15.14.0",
     "prettier": "^3.5.1",
     "ts-node": "^10.9.2",
-    "@types/node": "^20.11.30",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
