--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "fast-deep-equal": "^3.1.3",
     "gql.tada": "^1.8.10",
     "graphql": "^16.10.0",
+    "html5-qrcode": "^2.3.8",
     "papaparse": "^5.5.2",
     "qrcode": "^1.5.4",
     "quill": "^2.0.3",
