--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@apollo/server": "^4.11.3",
     "@as-integrations/fastify": "^2.1.1",
     "@fastify/cookie": "^7.4.0",
+    "@fastify/formbody": "^7.4.0",
     "@fastify/jwt": "^9.0.4",
     "@fastify/multipart": "^7.7.3",
     "@fastify/oauth2": "^7.9.0",
@@ -43,6 +44,7 @@
     "graphql": "^16.10.0",
     "graphql-type-json": "^0.3.2",
     "html-to-text": "^9.0.5",
+    "iconv-lite": "^0.6.3",
     "isomorphic-dompurify": "^2.22.0",
     "memoizee": "^0.4.17",
     "nodemailer": "^6.10.0",
