--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,9 +17,7 @@
       }
     ]
   },
-  "include": [
-    "./src/**/*.ts"
-  ],
+  "include": ["./src/**/*.ts"],
   "ts-node": {
     "esm": true,
     "transpileOnly": true
