iCal auf der Serverseite erzeugen

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -23,6 +23,7 @@
     "noUncheckedSideEffectImports": true,
 
     "paths": {
+      "@shared/*": ["../shared/src/*"],
       "@*": ["./src/*"]
     },
     "plugins": [
