pdns docker configuration fixed

--- a/dns/Dockerfile
+++ b/dns/Dockerfile
@@ -3,6 +3,11 @@ FROM powerdns/pdns-auth-master:latest
 # Install PostgreSQL client tools
 USER root
 RUN apt-get update && \
-    apt-get install -y postgresql-client && \
+    apt-get install -y postgresql-client gettext && \
     rm -rf /var/lib/apt/lists/*
-USER pdns 
+
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+RUN touch /etc/powerdns/pdns.conf && chown pdns /etc/powerdns/pdns.conf
+USER pdns
+ENTRYPOINT ["/entrypoint.sh"]
