--- a/backend/package.json
+++ b/backend/package.json
@@ -67,15 +67,18 @@
     "@mikro-orm/reflection": "^6.4.9",
     "@mikro-orm/seeder": "^6.4.9",
     "@parcel/watcher": "^2.5.1",
+    "@types/chokidar": "^2.1.7",
     "@types/glob": "^8.1.0",
     "@types/graphql-type-json": "^0.3.5",
     "@types/html-to-text": "^9.0.4",
+    "@types/marked": "^6.0.0",
     "@types/memoizee": "^0.4.11",
     "@types/node": "^22.13.9",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/slug": "^5.0.9",
+    "chokidar": "^3.5.3",
     "eslint": "^9.21.0",
     "eslint-typescript": "^1.1.0",
     "gql.tada": "^1.8.10",
@@ -86,14 +89,13 @@
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
+    "marked": "^15.0.8",
     "nodemon": "^3.1.9",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0",
-    "vitest": "^3.0.8",
-    "chokidar": "^3.5.3",
-    "@types/chokidar": "^2.1.7"
+    "vitest": "^3.0.8"
   }
 }
