--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "isomorphic-dompurify": "^2.22.0",
     "memoizee": "^0.4.17",
     "nodemailer": "^6.10.0",
+    "nodemailer-plugin-inline-base64": "^2.1.1",
     "pino": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -96,6 +97,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0",
-    "vitest": "^3.0.8"
+    "vitest": "^3.0.8",
+    "​nodemailer-plugin-inline-base64": "link:@types/​nodemailer-plugin-inline-base64"
   }
 }
