--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
     "start:prod": "NODE_ENV=production node dist/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:debug": "TEST_LOG_LEVEL=debug vitest run",
+    "test:debug:watch": "TEST_LOG_LEVEL=debug vitest",
     "lint": "eslint src && tsc -b",
     "make-demo-db": "npx mikro-orm-esm migration:fresh --drop-db --seed DemoSeeder",
     "migration:up": "mikro-orm-esm migration:up",
